--- a/style.css
+++ b/style.css
@@ -1,22 +1,34 @@
 body {
-  margin: 0px;
+  margin: 0rem;
   background: #f7f7f7;
   font-family: Arial, Helvetica, sans-serif;
   display: grid;
   justify-items: center;
-  gap: 60px;
+  gap: 3.75rem;
   margin-top: 60px;
+}
+
+.header {
+  display: grid;
+  justify-items: center;
+  gap: 60px;
+}
+
+ul {
+  list-style: none;
+  margin: 0px;
+  padding: 0px;
 }
 
 p,
 h1,
 h2,
 h3 {
-  margin: 0px;
+  margin: 0rem;
 }
 
 p {
-  font-size: 20px;
+  font-size: 1.25rem;
   line-height: 1.3;
 }
 
@@ -32,79 +44,151 @@ a {
 .menu {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 1.25rem;
   justify-content: center;
 }
 
 .menu a {
-  padding: 15px 30px;
+  display: block;
+  padding: 1rem 2rem;
   background: #fff;
-  color: black;
-  border-radius: 4px;
+  color: #000;
+  border-radius: 0.25rem;
+  padding: 1rem 2rem;
+  border: 2px solid #fff;
+}
+
+.menu a:hover {
+  border-color: #e21;
 }
 
 .conteudo {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  max-width: 1000px;
+  max-width: 62.5rem;
 }
 
 .introducao {
   background: #fff;
   display: grid;
   text-align: right;
-  padding: 40px;
+  padding: 2.5rem;
   position: relative;
   align-content: center;
-  gap: 20px;
+  gap: 1.25rem;
   justify-items: end;
 }
 
-.detalhe {
-  width: 60px;
-  height: 4px;
+.introducao h1 {
+  font-size: 2rem;
+}
+
+.introducao::before {
+  content: "";
+  width: 3.75rem;
+  height: 0.25rem;
   background: #e21;
   position: absolute;
-  top: 30px;
-  right: -30px;
+  top: 1.87rem;
+  right: -1.87rem;
+}
+
+.introducao-cover img {
+  object-fit: cover;
+  height: 100%;
 }
 
 .botao {
   background: #e21;
   color: #fff;
-  padding: 15px 30px;
-  border-radius: 4px;
+  padding: 1rem 2rem;
+  border-radius: 0.25rem;
+}
+
+.botao:hover {
+  background-color: #900;
 }
 
 .subtitulo {
-  font-size: 64px;
+  font-size: 4rem;
   color: #c6c6c6;
   text-align: right;
-  padding: 40px;
+  padding: 2.5rem;
   text-transform: uppercase;
   align-self: center;
+  background-image: url("./img/onda.svg");
 }
 
 .vantagens {
   background: #fff;
-  padding: 40px;
+  padding: 2.5rem;
 }
 
 .vantagens-item {
   display: grid;
   grid-template-columns: auto 1fr;
-  gap: 10px 20px;
-  padding: 20px;
+  gap: 0.62rem 1.25rem;
+  padding: 1.25rem;
+  border-left: 0.25rem solid transparent;
 }
 
 .vantagens-item p {
   grid-column: 2;
 }
 
+.vantagens-item:hover {
+  border-color: #e21;
+}
+
+.vantagens-item:nth-child(odd) {
+  background-color: #f7f7f7;
+}
+
 .rodape {
   background: #fff;
   width: 100%;
   text-align: center;
-  padding: 40px;
+  padding: 2.5rem;
   box-sizing: border-box;
+}
+
+@media (max-width: 1000px) {
+  .conteudo-vantagem {
+    grid-template-columns: 1fr;
+  }
+  .subtitulo {
+    text-align: center;
+  }
+}
+
+@media (max-width: 600px) {
+  .conteudo {
+    grid-template-columns: 1fr;
+  }
+  .introducao::before {
+    display: none;
+  }
+  body {
+    margin-top: 20px;
+    gap: 30px;
+  }
+  .header {
+    gap: 30px;
+  }
+  .introducao {
+    text-align: left;
+    justify-items: start;
+  }
+  .subtitulo {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 400px) {
+  p {
+    font-size: 1rem;
+  }
+  .subtitulo {
+    font-size: 2rem;
+  }
 }
